apps/production/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-deployment
spec:
  selector:
    matchLabels:
      app: test-app
  replicas: 4 # tells deployment to run 4 pods matching the template
