apps/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  rules:
  - host: production-app.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80
